--- a/src/app/select-menu/select-menu.component.css
+++ b/src/app/select-menu/select-menu.component.css
@@ -33,6 +33,7 @@
   background-color: var(--background-secondary);
   font-size: 16px;
   width: 100px;
+  z-index: 1000;
 }
 
 .select .option {
